--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -71,16 +71,20 @@
                 <p:panelGrid columns="2" style="margin-top: 10px;" id="panelkwoty">
                     <p:outputLabel value="ilośc godzin wg kalendarza Polska:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.iloscgodzin}" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2">
-                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek(rachunekZlecenieView.rachunekdoumowyzlecenia)}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunekdomyslny()}" update="RachunekZleceniaForm:panelkwoty, RachunekZleceniaForm:panelkwoszty"/>
                     </p:inputNumber>
                      <p:outputLabel value="kwota brutto Polska:"/>
-                    <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwota}" id="lolo1"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
+                    <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwota}" id="lolo1"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right">
+                         <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunekdomyslnyKwotyreczne()}" update="RachunekZleceniaForm:panelkwoty, RachunekZleceniaForm:panelkwoszty"/>
+                    </p:inputNumber>
                     <p:outputLabel value="ilośc godzin wg kalendarza Oddelegowanie:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.iloscgodzinoddelegowanie}" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2">
-                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek(rachunekZlecenieView.rachunekdoumowyzlecenia)}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunekdomyslny()}" update="RachunekZleceniaForm:panelkwoty, RachunekZleceniaForm:panelkwoszty"/>
                     </p:inputNumber>
                     <p:outputLabel value="kwota brutto Oddelegowanie:"/>
-                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwotaoddelegowanie}" id="lolo21"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
+                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwotaoddelegowanie}" id="lolo21"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right">
+                         <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunekdomyslnyKwotyreczne()}" update="RachunekZleceniaForm:panelkwoty, RachunekZleceniaForm:panelkwoszty"/>
+                    </p:inputNumber>
                      <p:outputLabel value="Razem wynagrodzenie:"/>
                      <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwotasuma}" id="lolo2321"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
                 </p:panelGrid>
@@ -90,21 +94,32 @@
                 </p:panelGrid>
                 <p:panelGrid columns="2" style="margin-top: 10px;">
                     <p:outputLabel value="status studenta:"/>
-                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.statusstudenta}" styleClass="czekpole"/>
+                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.statusstudenta}" styleClass="czekpole">
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.edytujkwadraciki}"/>
+                    </p:selectBooleanCheckbox>
                     <p:outputLabel value="odliczać kwotę wolną:"/>
-                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.odliczackwotewolna}" styleClass="czekpole"/>
+                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.odliczackwotewolna}" styleClass="czekpole">
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.edytujkwadraciki}"/>
+                    </p:selectBooleanCheckbox>
                     <p:outputLabel value="naliczać społeczne:"/>
-                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.spoleczne}" styleClass="czekpole"/>
+                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.spoleczne}" styleClass="czekpole">
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.edytujkwadraciki}"/>
+                    </p:selectBooleanCheckbox>
                     <p:outputLabel value="naliczać chorobowe:"/>
-                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.chorobowa}" styleClass="czekpole"/>
+                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.chorobowa}" styleClass="czekpole">
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.edytujkwadraciki}"/>
+                    </p:selectBooleanCheckbox>
                     <p:outputLabel value="naliczać zdrowotną:"/>
-                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.zdrowotna}" styleClass="czekpole"/>
+                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.zdrowotna}" styleClass="czekpole">
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.edytujkwadraciki}"/>
+                    </p:selectBooleanCheckbox>
                     <p:outputLabel value="naliczać podatek:"/>
                     <h:outputText value="podatek zryczałtowany - nierezydent" rendered="#{rachunekZlecenieView.rachunekdoumowyzlecenia.umowa.angaz.nierezydent eq true}"/>
                     <h:outputText value="podatek wg skali" rendered="#{rachunekZlecenieView.rachunekdoumowyzlecenia.umowa.angaz.nierezydent eq false}"/>
                 </p:panelGrid>
-                <p:panelGrid columns="1">
+                <p:panelGrid columns="2">
                     <p:commandButton value="zaksięguj" actionListener="#{rachunekZlecenieView.zaksieguj()}" update="RachunekZleceniaForm" styleClass="buttonnorm" rendered="#{rachunekZlecenieView.rachunekdoumowyzlecenia.id eq null}"/>
+                    <p:commandButton value="edytuj" actionListener="#{rachunekZlecenieView.edytujkwadraciki()}" update="RachunekZleceniaForm" styleClass="buttonnorm" rendered="#{rachunekZlecenieView.rachunekdoumowyzlecenia.id ne null and rachunekZlecenieView.rachunekdoumowyzlecenia.pasekwynagrodzen eq null}"/>
                     <p:commandButton value="usuń" actionListener="#{rachunekZlecenieView.usun()}" update="RachunekZleceniaForm" styleClass="buttonnorm2" 
                                      rendered="#{rachunekZlecenieView.rachunekdoumowyzlecenia.id ne null and rachunekZlecenieView.rachunekdoumowyzlecenia.pasekwynagrodzen eq null}">
                          <p:confirm type="popup" header="Usuwanie rachunku do umowy" message="Na pewno usunąć rachunek?" icon="pi pi-exclamation-triangle"/>
