--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsv_nazwy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsv_nazwy.xhtml
@@ -22,7 +22,7 @@
         <h:outputText value="import dokumentów WDT/WNT z pliku XLS AdditionalDataTemplate TYLKO NIEMCY"/>
         <h:form>
             <p:growl life="3600"  id="messages1"/>
-            <p:panelGrid layout="tabular" columns="2">
+            <p:panelGrid layout="tabular" columns="3">
                 <p:panelGrid layout="tabular" columns="1">
                   <p:fileUpload chooseIcon="fa fa-upload" listener="#{amazonImportNazwy.importujsprzedaz}"
                                 mode="advanced" dragDropSupport="true" 
@@ -34,7 +34,13 @@
                                 auto="true" oncomplete="PF('dialogAjaxCzekaj').hide(); $('#idTwojegoUploadu input[type=file]').val('');"
 >
                   </p:fileUpload>
-
+                    
+                </p:panelGrid>
+                <p:panelGrid layout="tabular" columns="2" style="margin-left: 30px;">
+                        <p:selectBooleanCheckbox value="#{amazonImportNazwy.tylkoNiemcy}" label="tylko Niemcy" itemLabel="tylko Niemcy">
+                            <p:ajax event="change" partialSubmit="true" global="false"/>
+                        </p:selectBooleanCheckbox>
+                    
                 </p:panelGrid>
                 <p:panelGrid layout="tabular" columns="2" style="margin-left: 30px;">
                     <p:commandButton value="zaksięguj WDT/WNT" update="importtabelanazwy" actionListener="#{amazonImportNazwy.zaksiegujWDTjpk}"/>
